Tue May 25 12:08:48 2004  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>

        * DnC/NodeManager/Node_Daemon.cpp:

          Removed repetitive registration with the IORTable

Tue May 25 12:02:52 2004  Boris Kolpackov  <boris@dre.vanderbilt.edu>

	* DnC/Deployment.xsd:

	  Initial set of "normalization" changes.


        * DnC/Deployment.xsd.orig:
        * DnC/XMI.xsd.orig:

	  Added backup copies.

Mon May 24 14:13:51 2004  Gan Deng  <gan.deng@vanderbilt.edu>

        * DnC/DomainApplicationManager/DomainApplicationManager.h:
        * DnC/DomainApplicationManager/DomainApplicationManager.cpp:

        * DnC/DomainApplication/DomainApplication.h:
        * DnC/DomainApplication/DomainApplication.cpp:

          Added these files.


Mon May 24 21:18:07 2004  Tao Lu  <lu@dre.vanderbilt.edu>

	* examples/Hello/descriptors/run_test_remote.pl:
	* examples/Hello/descriptors/run_test_default.pl:

	  Updated the test script since Assembly_Deployer takes
	  two more command line options.

Mon May 24 19:44:32 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DnC/Config_Handlers/ADD_Handler.*:
        * DnC/Config_Handlers/ACD_Handler.*:
        * DnC/Config_Handlers/APM_Handler.*:
        * DnC/Config_Handlers/CRDD_Handler.*:
        * DnC/Config_Handlers/DP_Handler.*:
        * DnC/Config_Handlers/IDD_Handler.*:
        * DnC/Config_Handlers/IRDD_Handler.*:
        * DnC/Config_Handlers/MDD_Handler.*:
        * DnC/Config_Handlers/PCD_Handler.*:
        * DnC/Config_Handlers/PPM_Handler.*:
        * DnC/Config_Handlers/PSPE_Handler.*:
        * DnC/Config_Handlers/PSPR_Handler.*:
        * DnC/Config_Handlers/RDD_Handler.*:
        * DnC/Config_Handlers/SID_Handler.*:
        * DnC/Config_Handlers/SPE_Handler.*:
        * DnC/Config_Handlers/SPR_Handler.*:

          Removed the above mentioned handlers as they are
          not used.

Mon May 24 11:50:15 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DnC/Config_Handlers/Plan_Handler.cpp:
