@@ -1,3 +1,14 @@
+Tue May 25 12:06:37 2004  Venkita Subramonian  <venkita@cs.wustl.edu>
+
+	* tests/RTCCM/Priority_Test/Workers/IOB_Worker_exec.cpp: 
+	* tests/RTCCM/Priority_Test/Workers/CB_Worker_exec.cpp: 
+	* tests/RTCCM/Priority_Test/Controllers/Controller_exec.{cpp,h}: 
+	* tests/RTCCM/Priority_Test/Controllers/Rate_Controller.{cpp,h}:
+	 
+	  Fixed compile errors regarding pure virtual functions not being
+	  implemented. Added empty method definitions for ciao_preactivate
+	  and ciao_postactivate.
+	
 Tue May 25 12:08:48 2004  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>
 
         * DnC/NodeManager/Node_Daemon.cpp:
